k8s/overlays/production/deployment-patch.yaml
# SPDX-License-Identifier: PMPL-1.0-or-later
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formdb-http-api
spec:
  replicas: 5  # More replicas in production

  template:
    spec:
      containers:
      - name: formdb-http-api
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
          limits:
            cpu: 4000m
            memory: 4Gi
